--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-fastapi
-uvicorn
-gradio
-langchain
-faiss-cpu
-huggingface-hub
 sentence-transformers
 pypdf
 openpyxl
-python-multipart
 google-api-python-client
 google-auth
 google-auth-oauthlib
 python-dotenv
+fastapi>=0.68.0
+uvicorn>=0.15.0
+gradio>=3.0.0
+langchain-core>=0.3.24
+langchain-community>=0.3.24
+huggingface-hub>=0.4.0
+faiss-cpu>=1.7.4
+python-multipart>=0.0.5
