--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-sentence-transformers
 pypdf
 openpyxl
 google-api-python-client
@@ -12,4 +11,7 @@ langchain-core>=0.3.24
 langchain-community>=0.3.24
 huggingface-hub>=0.4.0
 faiss-cpu>=1.7.4
+langchain-huggingface>=0.0.1
+sentence-transformers>=2.2.2
+unstructured>=0.15.0
 python-multipart>=0.0.5
