--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ langchain-huggingface>=0.0.1
 sentence-transformers>=2.2.2
 unstructured>=0.15.0
 python-multipart>=0.0.5
+beautifulsoup4
+html2text
+requests
