--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-pypdf
-openpyxl
-google-api-python-client
-google-auth
-google-auth-oauthlib
-python-dotenv
-fastapi>=0.68.0
-uvicorn>=0.15.0
-gradio>=3.0.0
-langchain-core>=0.3.24
-langchain-community>=0.3.24
-huggingface-hub>=0.4.0
-faiss-cpu>=1.7.4
-langchain-huggingface>=0.0.1
-sentence-transformers>=2.2.2
-unstructured>=0.15.0
-python-multipart>=0.0.5
-beautifulsoup4
-html2text
+fastapi
+uvicorn
+langchain
+langchain-community
+langchain-huggingface
+faiss-cpu
+gradio
+sentence-transformers
 requests
+openai
+# 其餘如有用到再加
