--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
+fastapi
+uvicorn
+gradio
+openai
+langchain
+langchain-community
+huggingface_hub
+sentence-transformers
+faiss-cpu
+unstructured
 pypdf
-openpyxl
-google-api-python-client
-google-auth
-google-auth-oauthlib
-python-dotenv
-fastapi>=0.68.0
-uvicorn>=0.15.0
-gradio>=3.0.0
-langchain-core>=0.3.24
-langchain-community>=0.3.24
-huggingface-hub>=0.4.0
-faiss-cpu>=1.7.4
-langchain-huggingface>=0.0.1
-sentence-transformers>=2.2.2
-unstructured>=0.15.0
-python-multipart>=0.0.5
-llama-cpp-python>=0.2.54
-gdown
+python-docx
+xlrd
