--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,5 @@ services:
     startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
     plan: starter
     envVars:
-      - key: OPENAI_API_KEY
+      - key: COHERE_API_KEY
         sync: false
