--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,16 @@
 fastapi
 uvicorn
 gradio
-openai
 langchain
 langchain-community
-huggingface_hub
-sentence-transformers
 faiss-cpu
-unstructured
-pypdf
-python-docx
-xlrd
-langchain-huggingface
-langchain-openai
+openai
 langchain-cohere
 cohere
 pdfminer.six
 openpyxl
+python-docx
+xlrd
 beautifulsoup4
 requests
-pi-heif
-unstructured_inference
-pytesseract
-pdf2image
+psutil
