--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,36 @@
-fastapi
-uvicorn
-gradio>=4.6.0
-langchain
-langchain-community
-faiss-cpu
+fastapi>=0.95.0
+uvicorn[standard]>=0.22.0
+gradio>=3.45.1
+langchain>=0.0.300
+langchain-community>=0.3.24
+faiss-cpu>=1.7.3
 openai
-langchain-cohere
-cohere
+langchain-cohere>=0.0.6
+cohere>=4.0.0
 pdfminer.six
 openpyxl
 python-docx
 xlrd
-beautifulsoup4
-requests
-psutil
-unstructured
+beautifulsoup4>=4.12.0
+requests>=2.28.1
+psutil>=5.9.4
+unstructured>=0.7.2
 pytesseract
 pdf2image
 python-docx
-openpyxl
+openpyxl>=3.1.2
 xlrd
 networkx
 tiktoken
-line-bot-sdk
-pdfminer.six
-python-multipart
+line-bot-sdk>=2.0.1
+pdfminer.six>=20221105
+python-multipart>=0.0.6
+html2text>=2020.1.16
+lxml>=4.6.4
+python-docx>=0.8.11
+python-pptx>=0.6.21
+docx2txt>=0.8
+pandas>=1.5.2
+
 
 
